sumo/tests/duarouter/alternatives/style2_input/errors/route/route_cost_false/errors.duarouter
Error: Attribute 'cost' in definition of route(alternative) '!1' is not a real number.
Quitting (on error).
